added user login and creation pages and modified the look of the pages

--- a/templates/base.html
+++ b/templates/base.html
@@ -45,6 +45,27 @@
                             <i class="bi bi-tags"></i> Manage Tags
                         </a>
                     </li>
+                    {% if session.user_id %}
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.endpoint == 'auth_profile' %}active{% endif %}" href="{{ url_for('auth_profile') }}">
+                            <i class="bi bi-person"></i> Profile
+                            {% if session.user_status == 'unverified' %}
+                                <span class="badge bg-warning text-dark ms-1">Unverified</span>
+                            {% endif %}
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('auth_logout') }}">
+                            <i class="bi bi-box-arrow-right"></i> Logout
+                        </a>
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.endpoint == 'auth_login' %}active{% endif %}" href="{{ url_for('auth_login') }}">
+                            <i class="bi bi-box-arrow-in-right"></i> Login
+                        </a>
+                    </li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
