--- a/templates/login.html
+++ b/templates/login.html
@@ -46,6 +46,13 @@
                         </label>
                     </div>
                     
+                    <!-- Forgot Password Link -->
+                    <div class="mb-3 text-end">
+                        <a href="{{ url_for('auth_forgot_password') }}" class="text-decoration-none">
+                            Forgot Password?
+                        </a>
+                    </div>
+                    
                     <!-- Submit Button -->
                     <div class="d-grid">
                         <button type="submit" class="btn btn-primary btn-lg">
