--- a/templates/profile.html
+++ b/templates/profile.html
@@ -43,7 +43,7 @@
                 <div class="row">
                     <div class="col-md-6">
                         <h5>Member Since</h5>
-                        <p class="text-muted">{{ user.created_at[:8] if user.created_at else 'Unknown' }}</p>
+                        <p class="text-muted">{{ user.created_at.strftime('%Y-%m-%d') if user.created_at else 'Unknown' }}</p>
                     </div>
                 </div>
                 
